k8s/reserva-service/reserva-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reserva-service
  namespace: default
  labels:
    app: reserva-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reserva-service
  template:
    metadata:
      labels:
        app: reserva-service
    spec:
      containers:
        - name: reserva-service
          image: samuelgislon/reserva-service:latest
          ports:
            - containerPort: 8081
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 90
            periodSeconds: 10
