k8s/reserva-service/reserva-service.yml
apiVersion: v1
kind: Service
metadata:
  name: reserva-service-service
  namespace: default
spec:
  selector:
    app: reserva-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
