k8s/reserva-service/reserva-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reserva-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: reserva.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reserva-service-service
                port:
                  number: 8081
